fix: overflow container

--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -713,6 +713,10 @@ video {
   margin-top: 2rem;
 }
 
+.box-border {
+  box-sizing: border-box;
+}
+
 .block {
   display: block;
 }
